--- a/lib/splitpass/Makefile
+++ b/lib/splitpass/Makefile
@@ -8,7 +8,7 @@ LEVEL=../..
 #
 # Give the name of a library.  This will build a dynamic version.
 #
-LIBRARYNAME=splitpass DG
+LIBRARYNAME=splitpass
 LOADABLE_MODULE=1
 
 #
